--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -424,6 +424,38 @@
 #shortpixel-settings-tabs #tab-adv-settings .deliverWebpTypes, #shortpixel-settings-tabs #tab-adv-settings .deliverWebpAlteringTypes {
   margin: 16px 0 16px 16px;
 }
+#shortpixel-settings-tabs #tab-adv-settings ul.exclude-list {
+  margin: 20px 0;
+}
+#shortpixel-settings-tabs #tab-adv-settings ul.exclude-list li {
+  float: left;
+  padding: 4px 12px;
+  border: 1px solid #1caecb;
+  background: #1caecb;
+  border-radius: 8px;
+  margin: 0 8px 0 0;
+  color: #fff;
+}
+#shortpixel-settings-tabs #tab-adv-settings ul.exclude-list li span {
+  margin-left: 6px;
+}
+#shortpixel-settings-tabs #tab-adv-settings .new-exclusion {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+#shortpixel-settings-tabs #tab-adv-settings .new-exclusion > div {
+  margin: 8px 0;
+}
+#shortpixel-settings-tabs #tab-adv-settings .new-exclusion > div label {
+  min-width: 100px;
+  display: inline-block;
+}
+#shortpixel-settings-tabs #tab-adv-settings .new-exclusion > div input, #shortpixel-settings-tabs #tab-adv-settings .new-exclusion > div select {
+  min-width: 250px;
+}
+#shortpixel-settings-tabs #tab-adv-settings .new-exclusion > div button {
+  margin-left: 104px;
+}
 #shortpixel-settings-tabs #tab-adv-settings .avifNoticeDisabled {
   padding: 12px 12px;
   line-height: 26px;
