--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -50,7 +50,26 @@
      }
   }
 
-   .list-overview
+   .extra-heading
+   {
+     width: 100%;
+     background: #fff;
+     border-top: 1px solid #ccd0d4;
+     box-shadow: 0 1px 1px rgba(0,0,0,.04);
+     span {
+       &:first-child {
+         width: 48px;
+       }
+        padding: 12px 0;
+        display: inline-block;
+     }
+     button {
+
+     }
+
+   }
+
+   .list-overview,
    {
       width: 100%;
       background: #fff;
