custom - bulk select with checkboxes custom - fix z-index overlap media - check on processable function to reduce amount of call

--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -229,7 +229,7 @@
 					 .sp-column-actions
 					 {
 						  position: relative;
-							z-index: 2;
+					//	z-index: 2;
 				//			right: 15px;
 							top: 0;
 					 }
