--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -1,13 +1,5 @@
 .sp-column-info {
   max-width: 300px;
-  /*.button.button-smaller {
-  	 font-size: 13px;
-  	 padding:0px 5px;
-  	 margin-bottom: 4px;
-  	 min-height:30px;
-
-  	 float:right;
-  } */
   /* Dropdown Content (Hidden by Default) */
   /* Links inside the dropdown */
   /* Change color of dropdown links on hover */
@@ -33,19 +25,16 @@
   padding: 0 5px;
   font-size: 20px;
   line-height: 20px;
-  /*background-color: #4CAF50;
-  color: white;
-  border: none;*/
   cursor: pointer;
 }
 .sp-column-info .sp-dropdown-content {
   display: none;
   right: 0;
   position: absolute;
-  background-color: #f9f9f9;
+  background: #f9f9f9;
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 5;
 }
 .sp-column-info .rtl .sp-dropdown-content {
   right: auto;
@@ -64,18 +53,6 @@
   display: block;
 }
 
-/*
-.wp-core-ui .column-wp-shortPixel .sp-column-actions
-.wp-core-ui .column-wp-shortPixel
-.wp-core-ui.rtl .column-wp-shortPixel .sp-column-actions,
-.wp-core-ui.rtl .column-wp-shortPixel .button.button-smaller{
-    float:left;
-}
-
-th.sortable.column-wp-shortPixel a,
-th.sorted.column-wp-shortPixel a {
-    display: inline-block;
-}*/
 .view-edit-media a.debugModal {
   margin: 20px 0;
   display: inline-block;
@@ -300,24 +277,16 @@ th.sorted.column-wp-shortPixel a {
 }
 
 div.sp-modal-shade {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 10000;
-  /* Sit on top - blame WP-admin for the z-index battle . */
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 10000; /* Sit on top - blame WP-admin for the z-index battle . */
   left: 0;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background: black;
-  /* Fallback color */
-  background: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   opacity: 0.4;
 }
 
@@ -326,12 +295,9 @@ div.shortpixel-modal {
   /*margin: 8% auto;  15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 30%;
-  /* Could be more or less, depending on screen size */
-  min-width: 300px;
-  /* Could be more or less, depending on screen size */
-  z-index: 999999;
-  /* Z-index wars :/ */
+  width: 30%; /* Could be more or less, depending on screen size */
+  min-width: 300px; /* Could be more or less, depending on screen size */
+  z-index: 999999; /* Z-index wars :/ */
   position: fixed;
   top: 10%;
   left: 50%;
