--- a/res/scss/elements/_actionbar.scss
+++ b/res/scss/elements/_actionbar.scss
@@ -1,5 +1,3 @@
-
-
 .sp-column-info
 {
 		max-width: 300px; // fix for wide screen when the actions will move
@@ -12,14 +10,6 @@
 			    margin-right: 0px;
 			}
 		}
-		/*.button.button-smaller {
-			 font-size: 13px;
-			 padding:0px 5px;
-			 margin-bottom: 4px;
-			 min-height:30px;
-
-			 float:right;
-	 } */
 
 	 .thumbnails.optimized
  	 {
@@ -39,9 +29,6 @@
 	     padding: 0 5px;
 	     font-size: 20px;
 	     line-height: 20px;
-	     /*background-color: #4CAF50;
-	     color: white;
-	     border: none;*/
 	     cursor: pointer;
 	 }
 
@@ -51,10 +38,10 @@
 	     display: none;
 	     right: 0;
 	     position: absolute;
-	     background-color: #f9f9f9;
+	     background: #f9f9f9;
 	     min-width: 200px;
 	     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	     z-index: 1;
+	     z-index: 5;
 	 }
 	 .rtl .sp-dropdown-content {
 	     right:auto;
@@ -76,15 +63,3 @@
 	 .sp-dropdown.sp-show .sp-dropdown-content {display:block;}
 
 } // column
-/*
-.wp-core-ui .column-wp-shortPixel .sp-column-actions
-.wp-core-ui .column-wp-shortPixel
-.wp-core-ui.rtl .column-wp-shortPixel .sp-column-actions,
-.wp-core-ui.rtl .column-wp-shortPixel .button.button-smaller{
-    float:left;
-}
-
-th.sortable.column-wp-shortPixel a,
-th.sorted.column-wp-shortPixel a {
-    display: inline-block;
-}*/
