--- a/res/css/shortpixel-settings.css
+++ b/res/css/shortpixel-settings.css
@@ -459,10 +459,13 @@
   display: none;
 }
 #shortpixel-settings-tabs #tab-adv-settings .new-exclusion {
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 1px #ccc;
   padding: 8px;
   margin: 8px 0;
+  display: inline-block;
+  background: #fff;
+  position: relative;
 }
 #shortpixel-settings-tabs #tab-adv-settings .new-exclusion h3 {
   margin: 2px 0;
@@ -475,7 +478,7 @@
   height: auto;
 }
 #shortpixel-settings-tabs #tab-adv-settings .new-exclusion div label {
-  min-width: 100px;
+  min-width: 110px;
   display: inline-block;
 }
 #shortpixel-settings-tabs #tab-adv-settings .new-exclusion div input, #shortpixel-settings-tabs #tab-adv-settings .new-exclusion div select {
@@ -485,8 +488,20 @@
   width: 80px;
   min-width: 0;
 }
+#shortpixel-settings-tabs #tab-adv-settings .new-exclusion div.button-actions {
+  margin-left: 114px;
+}
 #shortpixel-settings-tabs #tab-adv-settings .new-exclusion div button {
-  margin-left: 104px;
+  min-width: 75px;
+  padding: 8px 6px;
+}
+#shortpixel-settings-tabs #tab-adv-settings .new-exclusion div button[name=removeExclusion] {
+  background: #ff0000;
+  border-color: #ff0000;
+  padding: 4px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 #shortpixel-settings-tabs #tab-adv-settings .new-exclusion .not-visible {
   visibility: hidden;
