--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -132,7 +132,7 @@
          &:nth-child(odd) {
             background-color: #f9f9f9;
          }
-				 span:last-child
+				 > span:last-child
 				 {
 					  min-width: 400px;
 						max-width: 400px;
