--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -68,7 +68,6 @@
   .sp-column-actions
   {
 		 margin: 10px;
-     z-index: 2; // prevent overlap of text
      position: relative;
   }
   .thumbs-todo
@@ -78,7 +77,7 @@
      span {
          display: none;
       }
-     h4:hover ~ span { display: block; }
+     h4:hover ~ span { display: inline-block; }
   }
 
   h4 { margin: 0; }
