Fix - no show manual completion in optimization errors Fix - border in custom item tabs Fix - Show that filter has no results instead of generic message

--- a/res/css/shortpixel-othermedia.css
+++ b/res/css/shortpixel-othermedia.css
@@ -37,8 +37,9 @@
   font-size: 14px;
 }
 .shortpixel-other-media .custom-media-tabs a:focus {
-  border: 0;
+  outline: none;
   text-decoration: none;
+  box-shadow: none;
 }
 .shortpixel-other-media .custom-media-tabs a.selected {
   background: #fff;
