Fix - Float left instead of inline-block for todo list item

--- a/res/scss/view/_list-item.scss
+++ b/res/scss/view/_list-item.scss
@@ -73,6 +73,8 @@
   .thumbs-todo
   {
      position: relative;
+     float: left; // this all because inline-block doesn't play nice in media library, while in custom it overlaps the burger menu
+    clear: left;
      span {
          display: none;
       }
