--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -184,6 +184,8 @@
 }
 .sp-column-info .thumbs-todo {
   position: relative;
+  float: left;
+  clear: left;
 }
 .sp-column-info .thumbs-todo span {
   display: none;
