--- a/res/scss/view/_settings-advanced.scss
+++ b/res/scss/view/_settings-advanced.scss
@@ -135,6 +135,12 @@
 
 	}
 
+	.exclusion-save-reminder
+	{
+		 margin: 10px 0;
+		 font-weight: 500;
+	}
+
 	.avifNoticeDisabled
 	{
 		 padding: 12px 12px;
