--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -416,7 +416,18 @@
 
      }
 
-     .image { flex: 1; }
+     .image { flex: 1;
+			  a { display: inline-block;
+					outline: none;
+					border: 0;
+					text-decoration: none;
+					&:focus {
+						box-shadow: none;
+					}
+				}
+				img {  width: 200px}
+
+		 }
      .line {
         flex: 3;
         h3 { color: #00d0e5 };
@@ -427,10 +438,10 @@
        flex: 2;
        .button {
           background: #ff0000;
-          padding: 8px;
+          padding: 4px;
           font-weight: 700;
           font-size: 20px;
-          margin: 8px;
+          margin: 12px;
           color: #fff;
           text-transform: uppercase;
           //height: 45px;
