--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -416,29 +416,33 @@
 
      }
 
-     .image { flex: 1;
+     .image {
+			 	flex: 1;
+				text-align: right;
 			  a { display: inline-block;
 					outline: none;
 					border: 0;
 					text-decoration: none;
+
 					&:focus {
 						box-shadow: none;
 					}
 				}
-				img {  width: 200px}
+				img {  width: 180px}
 
 		 }
      .line {
-        flex: 3;
+        flex: 2;
         h3 { color: #00d0e5 };
 
      }
      .button-wrap
      {
-       flex: 2;
+       flex: 1;
+			 text-align: left;
        .button {
           background: #ff0000;
-          padding: 4px;
+          padding: 4px 12px;
           font-weight: 700;
           font-size: 20px;
           margin: 12px;
