Fix for Bulk going woobly

--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -33,7 +33,7 @@
     p.description
     {
        font-size: 14px;
-       //max-width: 650px;
+       max-width: 80%;
 
        margin: 15px 0 15px 15px;
     }
