--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -28,6 +28,7 @@
 }
 .shortpixel-bulk-wrapper p.description {
   font-size: 14px;
+  max-width: 80%;
   margin: 15px 0 15px 15px;
 }
 .shortpixel-bulk-wrapper .button {
