new on the process bg field in bulk

--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -668,7 +668,11 @@
 						 color: #000;
 					 }
         }
-
+				.new {
+					 color: #ff0000;
+					 font-weight: 500;
+					 margin-left: 2px;
+				}
       }
 
 			.count_limited
