--- a/res/scss/view/_modal.scss
+++ b/res/scss/view/_modal.scss
@@ -24,7 +24,7 @@ div.shortpixel-modal {
     left: 50%;
     max-height: 90%;
     overflow-y: auto;
-    .sp-close-button, button.sp-close-upgrade-button
+    button.sp-close-button, button.sp-close-upgrade-button
     {
       float: right;
       margin-top: 0px;
@@ -32,6 +32,7 @@ div.shortpixel-modal {
       border: none;
       font-size: 22px;
       line-height: 10px;
+			color: #000;
       cursor: pointer;
 
     }
