--- a/res/scss/view/_settings-cloudflare.scss
+++ b/res/scss/view/_settings-cloudflare.scss
@@ -1,5 +1,6 @@
 
-
+// @todo Can be removed 
+/*
 .cf_switch
 {
 
@@ -7,19 +8,13 @@
     width: 100%;
   	margin: 0 -2px;
   	background-color: #e2faff;
-  //	font-weight: 700;
   	display: inline-block;
-  //  font-size: 13px;
-		//cursor: default;
+
 
     span
     {
-//text-align:center;
-    //  font-size: 18px;
       padding:8px 0px 8px 15px;
       display:block;
-      //font-size: 13px;
-
     }
     input {
       display: none;
@@ -31,18 +26,7 @@
     }
   }
 
-	&.global-hidden
-	{
-		label {
-			 cursor: default;
-		}
-	  input:checked + span
-		{
-			 background-color: #fff;
-			 color: #000;
-			 padding-left: 0;
-		}
 
-	}
 
 }
+*/
