--- a/res/scss/shortpixel-settings.scss
+++ b/res/scss/shortpixel-settings.scss
@@ -4,4 +4,5 @@
 @import 'view/settings-cloudflare';
 @import 'view/settings-tools';
 @import 'view/inline-help';
-@import 'view/settings-multi'; 
+
+@import 'elements/setting';
