--- a/res/scss/view/_inline-help.scss
+++ b/res/scss/view/_inline-help.scss
@@ -1,18 +1,19 @@
 
-div.spio-inline-help{
-    float:right;
-		margin-left: 15px;
-		span{
-		    font-size: 1.8em;
-		    color: #1caecb;
-		    cursor: pointer;
-		}
-}
+
+
+// online documentation feature
+i.documentation {
+  font-size: 1.8em;
+  color: #1caecb;
+  cursor: pointer;
+} // question
+
+
 
 div.spio-modal-shade {
-    display: none; /* Hidden by default */
+  //  display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 10; /* Sit on top */
+    z-index: 10; /* Sit on top - zindex wars  */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -30,14 +31,21 @@ div.spio-modal {
 
     padding: 20px 16px 16px;
     border: 1px solid #888;
-    width: 30%; /* Could be more or less, depending on screen size */
+    width: 40%; /* Could be more or less, depending on screen size */
+    max-width: 100%;
     min-width: 300px; /* Could be more or less, depending on screen size */
     z-index: 100; /* Proper z-index */
     position: fixed;
     top: 10%;
-    left: 50%;
+    left: 30%;
+    height: 60%;
     max-height: 90%;
+
     overflow-y: auto;
+    iframe {
+        width: 100%;
+        height: 500px;
+    }
 		.spio-close-help-button {
 			 position:absolute;
 			 top:5px;
