--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -41,6 +41,7 @@
 
 	.shortpixel-key-valid {
 	    font-weight: bold;
+			margin-left: 25px;
 			.dashicons-yes:before {
 			    font-size: 2em;
 			    line-height: 25px;
